<resources>
    <string name="app_name">SmartTaskManager</string>

    <!--    splash screen texts-->
    <string name="splash_main_text">Smart Task Manager</string>
    <string name="splash_sub_text">Organize. Accomplish. Succeed.</string>

    <!--    signin screen texts-->
    <string name="signin_main_text">Welcome Back</string>
    <string name="signin_sub_text">Sign In to your Account</string>
    <string name="signin_email_text">Email</string>
    <string name="signin_email_hint_text">you@gmail.com</string>
    <string name="signin_password_text">Password</string>
    <string name="signin_password_hint_text">your password</string>
    <string name="signin_forgot_password_text">Forgot Password?</string>
    <string name="signin_signin_text">Sign In</string>
    <string name="signin_dha_text">Don\'t have an account?</string>
    <string name="signin_signup_text">Sign Up</string>

    <!--    signup screen texts-->
    <string name="signup_main_text">Create Account</string>
    <string name="signup_sub_text">Join Smart Task Manager</string>
    <string name="signup_fullname_text">Full Name</string>
    <string name="signup_fullname_hint_text">Mahinda Chandrapala</string>
    <string name="signup_email_text">Email</string>
    <string name="signup_email_hint_text">you@gmail.com</string>
    <string name="signup_password_text">Password</string>
    <string name="signup_password_hint_text">your password</string>
    <string name="signup_password_conf_text">Confirm Password</string>
    <string name="signup_password_conf_hint_text">your password</string>
    <string name="signup_agreement_text">I agree to the Term of Service and Privacy Policy</string>
    <string name="signup_create_account_text">Create Account</string>
    <string name="signup_dha_text">Already have an account?</string>
    <string name="signup_signup_text">Sign In</string>

    <!--    dashboard screen texts-->
    <string name="dashboard_top_active_text">0 Active</string>
    <string name="dashboard_top_sub_active_text">0 completed, 0 urgent</string>
    <string name="dashboard_greeting_text">Hello, </string>
    <string name="dashboard_cheering_text">Complete your tasks and stay productive.</string>
    <string name="dashboard_search_text">Search tasks...</string>
    <string name="dashboard_active_chip_text">Active</string>
    <string name="dashboard_completed_chip_text">Completed</string>
    <string name="dashboard_more_chip_text">More</string>

    <!--    dashboard bottomsheet screen texts-->
    <string name="dashboard_bs_title_text">Filters</string>
    <string name="dashboard_bs_prio_text">Priority</string>
    <string name="dashboard_bs_high_text">High</string>
    <string name="dashboard_bs_medium_text">Medium</string>
    <string name="dashboard_bs_low_text">Low</string>
    <string name="dashboard_bs_cate_text">Category</string>
    <string name="dashboard_bs_work_text">Work</string>
    <string name="dashboard_bs_perso_text">Personal</string>
    <string name="dashboard_bs_shop_text">Shopping</string>
    <string name="dashboard_bs_heal_text">Health</string>

    <!--    add/edit task screen texts-->
    <string name="task_ae_header_text">New Task</string>
    <string name="task_ae_title_text">Task Title</string>
    <string name="task_ae_title_hint_text">Enter task title.....</string>
    <string name="task_ae_desc_text">Description (Optional)</string>
    <string name="task_ae_desc_hint_text">Enter task details....</string>
    <string name="task_ae_priority_text">Priority</string>
    <string name="task_ae_priority1_text">Low</string>
    <string name="task_ae_priority2_text">Medium</string>
    <string name="task_ae_priority3_text">High</string>
    <string name="task_ae_category_text">Category</string>
    <string name="task_ae_category1_text">Work</string>
    <string name="task_ae_category2_text">Personal</string>
    <string name="task_ae_category3_text">Shopping</string>
    <string name="task_ae_category4_text">Health</string>
    <string name="task_ae_duedate_text">Due date (Optional)</string>
    <string name="task_ae_duedate_hint_text">mm/dd/yyyy</string>
    <string name="task_ae_createtask_button_text">Create Task</string>
    <string name="task_ae_cancel_button_text">Cancel</string>

    <!--    task details screen texts-->
    <string name="task_header_text">Task Details</string>
    <string name="task_title_text">Review Quarterly Report</string>
    <string name="task_description_text">Description</string>
    <string name="task_duedate_text">Due Date</string>
    <string name="task_tags_text">Tags</string>
    <string name="task_createdon_text">Created on</string>
    <string name="task_mark_complete_text">Mark as Completed</string>
    <string name="task_mark_edit_task_text">Edit Task</string>
    <string name="task_mark_delete_task_text">Delete Task</string>


</resources>