<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.TaskAddEditActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#3B5998"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/headerTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_regular"
            android:text="@string/task_ae_header_text"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/addEditCloseButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/addEditCloseButton" />

        <ImageView
            android:id="@+id/addEditCloseButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/close_icon" />

        <ProgressBar
            android:id="@+id/aeTaskProgressBar"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:indeterminate="true"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/headerTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/headerTextView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/inter_regular"
                    android:text="@string/task_ae_title_text"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/aeTaskTitleTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="32dp"
                    android:ems="10"
                    android:fontFamily="@font/inter_regular"
                    android:hint="@string/task_ae_title_hint_text"
                    android:inputType="text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/textView8"
                    app:layout_constraintTop_toBottomOf="@+id/textView8" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/inter_regular"
                    android:text="@string/task_ae_desc_text"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/textView8"
                    app:layout_constraintTop_toBottomOf="@+id/aeTaskTitleTextView" />

                <EditText
                    android:id="@+id/aeTaskDescTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:ems="10"
                    android:fontFamily="@font/inter_regular"
                    android:gravity="start|top"
                    android:hint="@string/task_ae_desc_hint_text"
                    android:inputType="textMultiLine"
                    android:lines="4"
                    app:layout_constraintEnd_toEndOf="@+id/aeTaskTitleTextView"
                    app:layout_constraintStart_toStartOf="@+id/aeTaskTitleTextView"
                    app:layout_constraintTop_toBottomOf="@+id/textView9" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/inter_regular"
                    android:text="@string/task_ae_priority_text"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/textView9"
                    app:layout_constraintTop_toBottomOf="@+id/aeTaskDescTextView" />

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="@+id/aeTaskDescTextView"
                    app:layout_constraintStart_toStartOf="@+id/aeTaskDescTextView"
                    app:layout_constraintTop_toBottomOf="@+id/textView10">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/aeTaskPrioChip1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="4dp"
                        android:layout_weight="1"
                        android:checkable="true"
                        android:fontFamily="@font/inter_regular"
                        android:text="@string/task_ae_priority1_text"
                        android:textAlignment="center"
                        app:chipCornerRadius="24dp" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/aeTaskPrioChip2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_marginEnd="4dp"
                        android:layout_weight="1"
                        android:checkable="true"
                        android:fontFamily="@font/inter_regular"
                        android:text="@string/task_ae_priority2_text"
                        android:textAlignment="center"
                        app:chipCornerRadius="24dp" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/aeTaskPrioChip3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_weight="1"
                        android:checkable="true"
                        android:fontFamily="@font/inter_regular"
                        android:text="@string/task_ae_priority3_text"
                        android:textAlignment="center"
                        app:chipCornerRadius="24dp" />

                </LinearLayout>

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/inter_regular"
                    android:text="@string/task_ae_category_text"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/textView10"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

                <androidx.gridlayout.widget.GridLayout
                    android:id="@+id/gridLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:columnCount="2"
                    app:layout_constraintEnd_toEndOf="@+id/linearLayout"
                    app:layout_constraintStart_toStartOf="@+id/linearLayout"
                    app:layout_constraintTop_toBottomOf="@+id/textView11"
                    app:rowCount="2">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/aeTaskCatChip1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:checkable="true"
                        android:fontFamily="@font/inter_regular"
                        android:text="@string/task_ae_category1_text"
                        android:textAlignment="center"
                        app:layout_columnWeight="1" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/aeTaskCatChip2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:checkable="true"
                        android:fontFamily="@font/inter_regular"
                        android:text="@string/task_ae_category2_text"
                        android:textAlignment="center"
                        app:layout_columnWeight="1" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/aeTaskCatChip3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:checkable="true"
                        android:fontFamily="@font/inter_regular"
                        android:text="@string/task_ae_category3_text"
                        android:textAlignment="center"
                        app:layout_columnWeight="1" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/aeTaskCatChip4"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:checkable="true"
                        android:fontFamily="@font/inter_regular"
                        android:text="@string/task_ae_category4_text"
                        android:textAlignment="center"
                        app:layout_columnWeight="1" />

                </androidx.gridlayout.widget.GridLayout>

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/inter_regular"
                    android:text="@string/task_ae_duedate_text"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/textView11"
                    app:layout_constraintTop_toBottomOf="@+id/gridLayout" />

                <DatePicker
                    android:id="@+id/aeTaskDatePicker"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:datePickerMode="calendar"
                    android:ems="10"
                    android:fontFamily="@font/inter_regular"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/gridLayout"
                    app:layout_constraintStart_toStartOf="@+id/gridLayout"
                    app:layout_constraintTop_toBottomOf="@+id/textView12" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </FrameLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/aeTaskCreateTaskButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:backgroundTint="#3B5998"
            android:fontFamily="@font/inter_regular"
            android:text="@string/task_ae_createtask_button_text"
            app:cornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/addEditCancelButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="#5C7AC2"
            android:fontFamily="@font/inter_regular"
            android:text="@string/task_ae_cancel_button_text"
            app:cornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/aeTaskCreateTaskButton"
            app:layout_constraintStart_toStartOf="@+id/aeTaskCreateTaskButton"
            app:layout_constraintTop_toBottomOf="@+id/aeTaskCreateTaskButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>